tests/NormalTests/paczka1/fuzzy1/77218145.err
Error in line 3: Lb7GzSew A32 86,6
Error in line 13: oi7ziCj5 S527 74,7
Error in line 5: f6M S966 261,6
Error in line 26: f6M A342 26,0
Error in line 25: TQmz S527 57,7
Error in line 32: f6M S966 56,16
Error in line 27: f6M S966 70,7
Error in line 30: TQmz S966 68,4
